cargo-features = ["different-binary-name"]

[package]
name = "hlg-f4ve-blink"
version = "0.0.1"
authors = ["Michael Mangus <contact@michaelmang.us>"]
description = "Learning to blink the HiLetgo STM32 F4VE development board"
keywords = ["arm", "cortex-m", "blinky", "stm32", "stm32f4", "f407ve"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/mmangus/hlg-f4ve-blink"

[dependencies.cortex-m]
version = "0.5.0"

[dependencies.cortex-m-rt]
version = "0.5.0"

[dependencies.cortex-m-rt-macros]
version = "0.7.0"

[dependencies.nb]
version = "1"

[dependencies.stm32f4xx-hal]
version = "0.10"
features = ["rt", "stm32f407"]

[dependencies.panic-itm]
version = "0.4.2"

[[bin]]
name = "blink"
filename = "blink.elf"
path = "src/main.rs"
